Fixed navbar links color contrast

--- a/assets/css/_navbar.scss
+++ b/assets/css/_navbar.scss
@@ -54,7 +54,7 @@
 			}
 			&:focus,&:hover,&.active{
 				a{
-					color: $primaryc !important;
+					color: $lightenc !important;
 					background: none !important;
 				}
 			}
